@@ -2,12 +2,8 @@ package com.example.odziezowy.Service;
 
 import com.example.odziezowy.DTOS.ProductsDto;
 import com.example.odziezowy.Model.Orders;
-import com.example.odziezowy.Model.OrdersProducts;
-import com.example.odziezowy.Model.Products;
-import com.example.odziezowy.Model.Users;
 import com.example.odziezowy.Repository.OrdersProductRepository;
 import com.example.odziezowy.Repository.OrdersRepository;
-import com.example.odziezowy.Repository.UsersRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -31,21 +27,19 @@ public class MailService {
     private final JavaMailSender javaMailSender;
     private final SimpleMailMessage message;
     private final MimeMessage mimeMessage;
-    private final UsersRepository usersRepository;
     private final OrdersProductRepository ordersProductRepository;
     private final OrdersRepository ordersRepository;
     private final SpringTemplateEngine templateEngine;
 
 
     @Autowired
-    public MailService(JavaMailSender javaMailSender, UsersRepository usersRepository, SpringTemplateEngine templateEngine, OrdersRepository ordersRepository, OrdersProductRepository ordersProductRepository) {
+    public MailService(JavaMailSender javaMailSender, SpringTemplateEngine templateEngine, OrdersRepository ordersRepository, OrdersProductRepository ordersProductRepository) {
         this.javaMailSender = javaMailSender;
         this.message = new SimpleMailMessage();
         this.mimeMessage = javaMailSender.createMimeMessage();
         this.templateEngine = templateEngine;
         this.ordersRepository = ordersRepository;
         this.ordersProductRepository = ordersProductRepository;
-        this.usersRepository = usersRepository;
 
     }
 
@@ -98,15 +92,17 @@ public class MailService {
         Orders orders = ordersRepository.findByIdOrders(order_id);
         List<ProductsDto> products = new ArrayList<>();
         ordersProductRepository.findAllByOrders(Optional.ofNullable(orders)).forEach(ordersProducts -> {
-            products.add(new ProductsDto(ordersProducts.getProducts().getName(), ordersProducts.getQuantity(), orders.getFinalPrice(), ordersProducts.getSize(), ordersProducts.getProducts().getName(), ordersProducts.getProducts().getPrice(), ordersProducts.getProducts().getDescription(), ordersProducts.getProducts().getBrand(), ordersProducts.getProducts().getImage(), ordersProducts.getProducts().getCategories().getCategoryName()));
+            if (orders != null) {
+                products.add(new ProductsDto(ordersProducts.getProducts().getName(), ordersProducts.getQuantity(), orders.getFinalPrice(), ordersProducts.getSize(), ordersProducts.getProducts().getName(), ordersProducts.getProducts().getPrice(), ordersProducts.getProducts().getDescription(), ordersProducts.getProducts().getBrand(), ordersProducts.getProducts().getImage(), ordersProducts.getProducts().getCategories().getCategoryName()));
+            }
         });
-        Map<String, List<ProductsDto>> properties = new HashMap<>();
-        properties.put("products", products);
         //properties.put("final_price", orders.getFinalPrice());
-        context.setVariables(Collections.unmodifiableMap(properties));
+        context.setVariables(Map.of("products", products));
         try {
             helper.setFrom(from);
-            helper.setTo(orders.getUsers().getEmail());
+            if (orders != null) {
+                helper.setTo(orders.getUsers().getEmail());
+            }
             helper.setSubject("Twoje zamówienie o id " + order_id + " zostało złożone!");
             String html = templateEngine.process("new_order.html", context);
             helper.setText(html, true);
